gitops/system/traefik/templates/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-traefik
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  stripPrefix:
    prefixes:
      - /traefik
