gitops/system/traefik/templates/ingressRoutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "HostRegexp(`{host:.*}`) && PathPrefix(`/argocd`)"
      services:
        - name: argocd-server
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "HostRegexp(`{host:.*}`) && PathPrefix(`/traefik`)"
      services:
        - name: api@internal
          kind: TraefikService
